# boaviztapi-sdk-rust

./: Cargo.toml  README.md
.github/: dependabot.yml
.openapi-generator/: FILES
docs/: Allocation.md  Box.md  Case.md  Cloud.md  CloudApi.md  ComponentApi.md  ConfigurationServer.md  ConsumptionProfileApi.md  ConsumptionProfileCpu.md  Cpu.md  DefaultApi.md  Desktop.md  Disk.md  ElecFactors.md  ExternalHdd.md  ExternalSsd.md  FunctionalBlock.md  IoT.md  IotApi.md  Laptop.md  ModelServer.md  Monitor.md  Motherboard.md  PeripheralApi.md  PowerSupply.md  Ram.md  Server.md  ServerApi.md  Smartphone.md  Tablet.md  Television.md  TerminalApi.md  TimeWorkload.md  Usage.md  Usage1.md  UsageCloud.md  UsageServer.md  UsbStick.md  UserTerminalApi.md  UtilsApi.md  (+3 more)
src/apis/: cloud_api.rs  component_api.rs  configuration.rs  consumption_profile_api.rs  default_api.rs  iot_api.rs  mod.rs  peripheral_api.rs  server_api.rs  terminal_api.rs  user_terminal_api.rs  utils_api.rs
src/models/: allocation.rs  case.rs  cloud.rs  configuration_server.rs  consumption_profile_cpu.rs  cpu.rs  desktop.rs  disk.rs  elec_factors.rs  external_hdd.rs  external_ssd.rs  functional_block.rs  http_validation_error.rs  io_t.rs  laptop.rs  location_inner.rs  mod.rs  model_box.rs  model_server.rs  monitor.rs  mother_board.rs  motherboard.rs  power_supply.rs  ram.rs  server.rs  server_dto.rs  smartphone.rs  tablet.rs  television.rs  time_workload.rs  usage.rs  usage_1.rs  usage_cloud.rs  usage_server.rs  usb_stick.rs  validation_error.rs  validation_error_loc_inner.rs  workload_power.rs  workload_time.rs
